# sombreado-service

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  db.py  logging.py  main.py  models.py  schemas.py
app/routes/: advisory.py  health.py  nearby.py
app/services/: advisory.py  exposure.py  geometry.py  projection.py  routes.py  sun.py
tests/: test_advisory.py  test_api.py  test_config_logging.py  test_db.py  test_exposure.py  test_projection.py  test_route_read_service.py
