[project]
name = "sombreado-service"
version = "0.1.0"
description = "Read-only onboard sun advisory backend for Consorcio Fenix route segments"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "astral>=3.2",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.0",
    "geoalchemy2>=0.15.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]
